--- a/css/index_intro.css
+++ b/css/index_intro.css
@@ -125,7 +125,8 @@ a:hover {
     .nav {
         flex: 1;
         
-        height: 1100px;
+        /*height: 1100px;*/
+        height: 100vh;
         position: sticky;
         top: 0px;
         background-color: rgb(0, 0, 0);
