--- a/css/main_style.css
+++ b/css/main_style.css
@@ -55,7 +55,7 @@
 
     .main_content {
         width: 100%;
-        height: 750px;
+        height: 800px;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -66,7 +66,9 @@
     padding-bottom: 50px;
     }
 
-    
+    #error_feld {
+        display: none;
+    }
 }
 
 /*Mittlere Geräte*/
