--- a/css/index_intro.css
+++ b/css/index_intro.css
@@ -57,18 +57,7 @@ a:hover {
         padding-right: 33%;
     }
 
-    .nav {
-        flex: 1;
-        
-        height: 1000px;
-        
-        top: 0px;
-        background-color: rgb(0, 0, 0);
-        /*border: 2px solid rgb(255, 0, 0);*/
-        
-        display: flex;
-        flex-direction: column;
-    }
+    
     
     .main {
         flex: 2.5;
@@ -87,21 +76,59 @@ a:hover {
         flex-direction: column;
     }
 
+    .nav {
+        flex: 1;
+        
+        height: 1000px;
+        
+        top: 0px;
+        background-color: rgb(0, 0, 0);
+        /*border: 2px solid rgb(255, 0, 0);*/
+        
+        display: flex;
+        flex-direction: column;
+        /*position: sticky;
+        z-index: 3;*/
+    }
+
     .nav_header {
         flex: 1;
         display: flex;
+        
         justify-content: space-evenly;
         align-items: center;
         border-bottom: 2px solid white;
+        /*border: 6px solid rgb(24, 237, 12);*/      
+        
     }
 
     .nav_list {
         flex: 2;
-        display: flex;
+        display: none;
         border-bottom: 2px solid white;
 
         justify-content: space-evenly;
         align-items: center;
+    }
+
+    .small-nav-container {
+        width: 100%;
+        height: 60px;
+        border-bottom: 2px solid rgb(255, 255, 255);
+        background-color: black;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        position: sticky;
+        top: 0;
+        z-index: 5;
+        
+    }
+
+    .small-nav-container a {
+        margin-top: 17px;
+        font-size: 20px;
     }
 
 }
@@ -135,6 +162,8 @@ a:hover {
         display: flex;
         flex-direction: column;
     }
+
+    
     
     .main {
         flex: 2.5;
@@ -162,6 +191,7 @@ a:hover {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
+        
     }
 
     .nav_list {
@@ -172,6 +202,10 @@ a:hover {
 
         justify-content: space-evenly;
         align-items: center;
+    }
+
+    .small-nav-container {
+        display: none;
     }
 
 }
