--- a/css/page_style.css
+++ b/css/page_style.css
@@ -197,7 +197,7 @@ iframe {
 
     .link-fuer-box-blog {
         width: 100%;
-        height: 260px;
+        height: 100%; /*270px*/
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -323,11 +323,12 @@ iframe {
 
 .choose-Playlist {
     width: 100%;
-    height: 45px;
-    margin: 40px;
+    /*height: 45px;*/
+    margin: 30px;
+    
     /*border-style: solid;
     border-width: 2px;
-    border-color: rgb(255, 255, 255);*/
+    border-color: rgb(211, 90, 90);*/
 
     display: flex;
     justify-content: space-evenly;
@@ -339,9 +340,11 @@ iframe {
 #button-Spotify {
     width: 40%;
     height: 100%;
+    
     background-color: rgb(0, 0, 0);
     font-size: 23px;
     color: rgb(255, 255, 255);
+    padding: 10px;
 
     border-style: solid;
     border-width: 4px;
@@ -353,6 +356,8 @@ iframe {
 #button-Apple-Music {
     width: 40%;
     height: 100%;
+    padding: 10px;
+    
     background-color: rgb(0, 0, 0);
     font-size: 23px;
     color: white;
