--- a/css/page_style.css
+++ b/css/page_style.css
@@ -324,7 +324,9 @@ iframe {
 .choose-Playlist {
     width: 100%;
     /*height: 45px;*/
-    margin: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    
     
     /*border-style: solid;
     border-width: 2px;
@@ -338,7 +340,7 @@ iframe {
 
 
 #button-Spotify {
-    width: 40%;
+    width: 30%;
     height: 100%;
     
     background-color: rgb(0, 0, 0);
@@ -354,7 +356,7 @@ iframe {
 }
 
 #button-Apple-Music {
-    width: 40%;
+    width: 45%;
     height: 100%;
     padding: 10px;
     
