--- a/css/blog_style.css
+++ b/css/blog_style.css
@@ -1,3 +1,13 @@
+table {
+    table-layout: fixed;
+    width: 90%;
+    border-collapse: collapse;
+    /*border: 3px solid rgb(255, 0, 255);*/
+    /*margin-left: 20px;*/
+    color: grey;
+    
+}
+
 .header_blog_container-main {
     
     width: 100%;
@@ -5,9 +15,9 @@
     display: flex;
     flex-direction: column;
     
-    
     align-items: left;
     text-align: left;
+    
 
     border: 4px solid white;
     
@@ -49,8 +59,9 @@
     height: 100%;
     
     border-radius: 0px;
-    margin-left: 0px;
-    margin-bottom: 0px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    padding-top: 0px;
     flex: 2;
 
     /*border-style: solid;
