--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,6 +1,10 @@
 .Main_level_1 {
     display: flex;
     flex-direction: column;
+    border: 2px solid rgb(255, 255, 255);
+    margin: 20px;
+    margin-bottom: 0px;
+    background-color: rgb(26, 26, 26);
 } 
 
 .colorswitch {
@@ -161,8 +165,7 @@
     justify-content: space-evenly;
     align-items: center;
 
-    /*border-top: 4px double rgb(255, 255, 255);   
-    border-bottom: 4px double rgb(255, 255, 255);*/
+    /*border: 4px double rgb(0, 255, 13);   */
 }
 
 
@@ -252,6 +255,6 @@
     justify-content: space-evenly;
     align-items: center;
 
-    position: absolute;
+    /*position: absolute;*/
     bottom: 0;
 }
