--- a/css/index_intro.css
+++ b/css/index_intro.css
@@ -29,7 +29,7 @@ ul li a {
 h2 {
     font-size: 50px;
     font-weight: bold;
-    text-shadow: 3px 3px 2px rgb(97, 178, 202);
+    /*text-shadow: 3px 3px 2px rgb(97, 178, 202);*/
 }
 
 p {
@@ -45,7 +45,7 @@ a:hover {
 @media only screen and (max-width: 1100px) {
 
     h1 {
-        font-size: 80px;
+        font-size: 90px;
         font-weight: bold;
         
     }
@@ -169,7 +169,7 @@ a:hover {
     .main {
         flex: 2.5;
         
-        height: 3100px;
+        height: 100%; /*3100px*/
         background-color: rgb(0, 0, 0);
         position: relative;
     
