--- a/css/main_style.css
+++ b/css/main_style.css
@@ -18,18 +18,7 @@
     border: 2px solid green;
 }
 
-.main_header {
-    width: 100%;
-    height: 250px;
 
-    display: flex;
-    justify-content: space-evenly;
-    text-align: center;
-    align-items: center;
-
-    
-
-}
 
 
 
@@ -37,40 +26,56 @@
 
 @media only screen and (max-width: 992px) {
 
+    .main_header {
+        width: 100%;
+        height: 200px;
+    
+        display: flex;
+        justify-content: space-evenly;
+        text-align: center;
+        align-items: center;
+    }
+    
     .feld_level_1 {
-        width: 70%;
+        width: 80%;
         height: 100%;
+        
+
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
+
         
     }
 
     .feld_level_2 {
-        padding-top: 40px;
-        width: 350px;
-        height: 300px;
+        padding: 15px;
+        width: 100%;
+        height: 100%;
+        margin-bottom: 40px;
         /*border: 6px solid rgb(255, 255, 255); */
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+
+        background-color: rgb(49, 49, 49);
     }
 
     .main_content {
         width: 100%;
-        height: 800px;
+        height: 100%;  /*800px*/
         display: flex;
         justify-content: space-evenly;
         align-items: center;
     }
 
     .main_header_text {
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     }
 
-    #error_feld {
+    .error_feld {
         display: none;
     }
 }
@@ -118,28 +123,52 @@
 
 @media only screen and (min-width: 1000px) { /*vorher 1450*/
 
+    .main_header {
+        width: 100%;
+        height: 250px;
+    
+        display: flex;
+        justify-content: space-evenly;
+        text-align: center;
+        align-items: center;
+    }
+    
     .feld_level_1 {
         width: 70%;
         height: 100%;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-bottom: 40px;
+
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
         align-items: center;
+
+        /*border: 2px solid red;*/
         
     }
 
     .feld_level_2 {
-        width: 240px;
-        height: 350px;
-        /*border: 6px solid rgb(255, 255, 255); */
+        width: 280px;
+        height: 350px; /*350px*/
+        /*border: 2px solid rgb(255, 255, 255); */
+        margin-bottom: 20px;
+
+        padding: 15px;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+        background-color: rgb(49, 49, 49);
+
+        
     }
 
     .main_content {
         width: 100%;
-        height: 680px;
+        height: 100%; /*680px*/
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -149,7 +178,10 @@
     padding: 50px;
     }
 
-
+    .error_feld {
+        height: 100%;
+        
+    }
 }
 
 
@@ -160,12 +192,13 @@
 .main_content_software {
     
     width: 100%;
-    height: 1400px;
+    height: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    overflow-wrap: anywhere;
 
-    /*border: 4px double rgb(0, 255, 13);   */
+      
 }
 
 
@@ -200,6 +233,10 @@
     flex: 1.5;
     overflow-wrap: anywhere;
     padding-top: 30px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+
+    border-top: 2px solid white;
 }
 
 .music_header {
@@ -209,13 +246,14 @@
 .music_link {
     color: rgb(201, 102, 140);
     font-weight: bold;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .video_container {
     width: 90%;
     height: 90%;
-    /*border: 3px solid red;*/
+    display: flex;
+    
 
     position: relative;
 }
@@ -229,7 +267,7 @@
     z-index: 1;
 }
 
-.software_text_cont {
+/*.software_text_cont {
     position: absolute;
     top: 0;
     width: 95%;
@@ -237,6 +275,18 @@
     text-align: left;
     padding: 30px;
     z-index: 3;
+
+}*/
+
+.software_text_cont {
+    
+    top: 0;
+    width: 95%;
+    
+    text-align: left;
+    padding: 30px;
+    z-index: 3;
+    
 
 }
 
